bk_ida/gccida/g3/simplify_relational_operation
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_relational_operation/src/simplify-rtx.c:2540:37: error: must use 'enum' tag to refer to type 'rtx_code'
rtx  simplify_relational_operation( rtx_code code, machine_mode mode, rtx op0, rtx op1) 
                                    ^
                                    enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_relational_operation/src/simplify-rtx.c:2540:52: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  simplify_relational_operation( rtx_code code, machine_mode mode, rtx op0, rtx op1) 
                                                   ^
                                                   enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_relational_operation/src/simplify-rtx.c:2544:4: error: expected ';' after expression
rtx v10; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_relational_operation/src/simplify-rtx.c:2544:5: error: use of undeclared identifier 'v10'
rtx v10; // r15 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_relational_operation/src/simplify-rtx.c:2548:4: error: expected ';' after expression
rtx v14; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_relational_operation/src/simplify-rtx.c:2548:5: error: use of undeclared identifier 'v14'
rtx v14; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_relational_operation/src/simplify-rtx.c:2552:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v18; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_relational_operation/src/simplify-rtx.c:2553:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v19; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_relational_operation/src/simplify-rtx.c:2554:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode pool_mode; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_relational_operation/src/simplify-rtx.c:2555:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v21; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_relational_operation/src/simplify-rtx.c:2558:4: error: expected ';' after expression
rtx result; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_relational_operation/src/simplify-rtx.c:2558:5: error: use of undeclared identifier 'result'
rtx result; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_relational_operation/src/simplify-rtx.c:2598:23: error: expected identifier or '('
 struct pool_constant = op0; 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_relational_operation/src/simplify-rtx.c:2601:13: error: expected ';' after expression
op1 = ( rtx)op0[1]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_relational_operation/src/simplify-rtx.c:2605:23: error: expected identifier or '('
 struct pool_constant = op0; 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_relational_operation/src/simplify-rtx.c:2611:23: error: expected identifier or '('
 struct pool_constant = get_pool_constant( op0->fld[0].rtx); 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_relational_operation/src/simplify-rtx.c:2616:23: error: expected identifier or '('
 struct pool_constant = simplify_subreg( v21, pool_constant, pool_mode, 0); 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_relational_operation/src/simplify-rtx.c:2618:2: error: expected expression
 struct pool_constant = op0; 
 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_relational_operation/src/simplify-rtx.c:2623:1: error: use of undeclared identifier 'v10'
v10 = op1; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_relational_operation/src/obj/simplify-rtx.o] Error 1
